[package]
name = "data_algorithm"
version = "0.1.0"
authors = ["IThawk <lianwei1994@163.com>"]
edition = "2021"
include = ["Cargo.toml", "LICENSE", "README.md"]
description = "data algorithm project"
readme = "README.md"
repository = "..........."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
