[package]
name = "http_cli"
version = "0.1.0"
authors = ["IThawk <lianwei1994@163.com>"]
edition = "2021"
include = ["Cargo.toml", "LICENSE", "README.md"]
description = "http client project"
readme = "README.md"
repository = "..........."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = { version = "3.0.7", features = ["derive"] } # 命令行解析
colored = "2" # 命令终端多彩显示
jsonxf = "1.1" # JSON pretty print 格式化
mime = "0.3" # 处理 mime 类型
reqwest = { version = "0.11", features = ["json"] } # HTTP 客户端
url="2.2.2"
tokio = { version = "1", features = ["full"] } # 异步处理库
